        and it was not fully supported everywhere.
        and we have no chance to drive a RFx000 with 3+ Extruders and the known type of electronics
- small fix for waitForTargetTemperature
- small fix for wrong display information (UI_TEXT_HEATING_UP instead of UI_TEXT_COOLING_DOWN) when waiting for temperature while processing a heat bed scan.

V RF.01.38.39.Mod (2018-03-05) 
- maybe improved HBS scan tolerance for uneven ceramic beds.
- always show full screen messages when finishing the HBS scan (in case of ok and fail) which the user has to dismiss with the ok button.
- improved menu text lengths for RF1000 16-char-display
- fix that a HBS-Scan after another HBS-Scan still has g_nLastZScanZPosition as a scan limit. That makes the second HBS impossible with some chance.
- cleanup some messages and g_uStartOfIdle around the HBS-Scan, ZOffsetScan, WorkpartScan and AlignExtruders

V RF.01.38.38.Mod (2018-03-03) 
- some commenting
- removed check that z-offset-scan to really allow the scan while the printer thinks it is printing.
- removed self introduced overflow on queuePositionCurrentSteps[E_AXIS]. queuePositionCurrentSteps is size 3.

V RF.01.38.37.Mod (2018-02-26) 
- dont allow any fan speed change to empty move cache. if this is needed fan speed has to be set in queue (TODO), not empty it.
- some commenting because i checked some things
- fix for easygo25's tilt-bug at the end of an SD-Print. http://www.rf1000.de/viewtopic.php?f=7&t=2199
- removed home-only-z when commanding home-all by menu and unknown z-endstops. homing should always do what the user demands and G28 as gcode does not have this limit. It seemd totally unnecessary and counterintuitive.

V RF.01.38.36.Mod (2018-02-22) 
- via menu the homing feedrate and maximum feedrate can now be adjusted better: 
    - Z increments 1, not 5. 
    - Maximum is MAX_FEEDRATE_X _Y _Z not 1000.