@@ -10,6 +10,7 @@ V RF.01.39+.Mod (2018-03-05)
         and we have no chance to drive a RFx000 with 3+ Extruders and the known type of electronics
 - small fix for waitForTargetTemperature
 - small fix for wrong display information (UI_TEXT_HEATING_UP instead of UI_TEXT_COOLING_DOWN) when waiting for temperature while processing a heat bed scan.
+- we now use MAX_ROOM_TEMPERATURE at synonymous positions (hbs scan wait for temperatures)
 
 V RF.01.38.39.Mod (2018-03-05) 
 - maybe improved HBS scan tolerance for uneven ceramic beds.
